Fix a bug where the language flag broke to a new line on small screens

--- a/less/style.less
+++ b/less/style.less
@@ -610,7 +610,7 @@ nav a:hover {
 
   .content-headline {
     .content-headline-hello, .social {
-      font-size: 4rem;
+      font-size: 3.75rem;
     }
 
     .content-headline-hello {
